<resources>
    <string name="app_name">FitAware</string>
    <string name="title_home">Home</string>
    <string name="title_team">Teams</string>
    <string name="title_awards">Awards</string>
    <string name="title_history">History</string>
    <string name="title_setting">Setting</string>

    <string name="userID">User/shuail8</string>

    <string name="teammateID">User/jfan12</string>

    <string-array name="UserStatus">
        <item>Profile</item>
<!--        <item>Advance Setting</item>-->
        <item>Change Password</item>
        <item>Log out</item>
        <item>Contact Us</item>
    </string-array>

    <string-array name="Daily_Weekly_Monthly">
        <item>Daily</item>
        <item>3 days</item>
        <item>5 days</item>
        <item>Weekly</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="default_notification_channel_id">default_notification_channel_id</string>
    <string name="msg_token_fmt">FCM Token: %s</string>

</resources>
