<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home"
            android:title="@string/title_home"/>

    <item
            android:id="@+id/navigation_history"
            android:icon="@drawable/ic_history"
            android:title="@string/title_history"/>

    <item
            android:id="@+id/navigation_team"
            android:icon="@drawable/ic_team"
            android:title="@string/title_team"/>

    <item
            android:id="@+id/navigation_awards"
            android:icon="@drawable/ic_awards"
            android:title="@string/title_awards"/>

    <item
            android:id="@+id/navigation_setting"
            android:icon="@drawable/ic_settings"
            android:title="@string/title_setting"/>

</menu>
